The heap was tasted!

--- a/AirLinePro/airline.ipynb
+++ b/AirLinePro/airline.ipynb
@@ -33,7 +33,59 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('../assets/files/Flight_Data_Reduced.csv')\n",
+    "df.sort_values(by= \"SourceAirport\" )\n",
+    "\n",
+    "# j = 0\n",
+    "# for i , r in df.iterrows():\n",
+    "#     try:\n",
+    "#         if df['SourceAirport'][i] == df['SourceAirport'][i + 1] and df['DestinationAirport'][i] == df['DestinationAirport'][i + 1] and df['Price'][i] != df['Price'][i+1]:\n",
+    "#             print((df.loc[i]) , '\\n########\\n' , df.loc[i+1])\n",
+    "#             j+=1\n",
+    "#     except Exception:\n",
+    "#         continue\n",
+    "# print(j)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
