label encoding done!

--- a/AirLinePro/airline.ipynb
+++ b/AirLinePro/airline.ipynb
@@ -36,7 +36,21 @@
    ],
    "source": [
     "df = pd.read_csv('../assets/files/Flight_Data_Reduced.csv')\n",
-    "df\n"
+    "df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "from Flight import FlightPrice"
    ],
    "metadata": {
     "collapsed": false,
@@ -48,24 +62,35 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "fs = FlightPrice.get_flights_price()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "107.71720488628927\n"
-     ]
+     "data": {
+      "text/plain": "{'Business', 'Economy'}"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import math\n",
-    "v1 = np.array([51.152199 , 35.416100 , 330])\n",
-    "v2 = np.array([-78.787498 , 35.877602 , 435])\n",
-    "n1 = math.sqrt(np.dot(v1,v1))\n",
-    "n2 = math.sqrt(np.dot(v2,v2))\n",
-    "d = abs(n1 - n2)\n",
-    "print(d)"
+    "s = set()\n",
+    "for f in fs:\n",
+    "    s.add(f.flight_class)\n",
+    "s"
    ],
    "metadata": {
     "collapsed": false,
@@ -77,121 +102,94 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "from globals import _flight_price_dataset\n",
+    "from MachineLearning import MyML\n",
+    "import pandas as pd"
+   ],
    "metadata": {
     "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
     "pycharm": {
      "name": "#%%\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "152.77454018060547\n",
-      "3995.8721199697634\n",
-      "808.060658560259\n",
-      "45.309802008232296\n",
-      "42.42611368751247\n",
-      "175.76977317579795\n"
+     "ename": "TypeError",
+     "evalue": "MyML.label_encode() missing 1 required positional argument: 'flight_price_df'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[38], line 3\u001B[0m\n\u001B[0;32m      1\u001B[0m flight_price_df \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mread_csv(_flight_price_dataset)\n\u001B[0;32m      2\u001B[0m flight_price_df\n\u001B[1;32m----> 3\u001B[0m \u001B[43mMyML\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mlabel_encode\u001B[49m\u001B[43m(\u001B[49m\u001B[43mflight_price_df\u001B[49m\u001B[43m \u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[1;31mTypeError\u001B[0m: MyML.label_encode() missing 1 required positional argument: 'flight_price_df'"
      ]
-    },
+    }
+   ],
+   "source": [
+    "flight_price_df = pd.read_csv(_flight_price_dataset)\n",
+    "flight_price_df\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [],
+   "source": [
+    "time_mapping = {\n",
+    "            'Early_Morning' : 1,\n",
+    "            'Morning' : 2,\n",
+    "            'Afternoon' : 3,\n",
+    "            'Evening' : 4,\n",
+    "            'Night' : 5,\n",
+    "            'Late_Night' : 6}\n",
+    "stops_mapping = {\n",
+    "'zero' : 1,\n",
+    "'one' : 2,\n",
+    "'two_or_more' : 3}\n",
+    "\n",
+    "class_mapping = {\n",
+    "'Economy' : 1,    'Business' : 2\n",
+    "}\n",
+    "\n",
+    "flight_price_df['departureTimeMapping'] = flight_price_df['departure_time'].map(time_mapping)\n",
+    "flight_price_df['arrivalTimeMapping'] = flight_price_df['arrival_time'].map(time_mapping)\n",
+    "flight_price_df['stopsMapping'] = flight_price_df['stops'].map(stops_mapping)\n",
+    "flight_price_df['classMapping'] = flight_price_df['class'].map(class_mapping)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
     {
      "data": {
-      "text/plain": "5220.213007582171"
+      "text/plain": "       departure_time stops   arrival_time     class  duration  days_left  \\\n0             Evening  zero          Night   Economy      2.17          1   \n1       Early_Morning  zero        Morning   Economy      2.33          1   \n2       Early_Morning  zero  Early_Morning   Economy      2.17          1   \n3             Morning  zero      Afternoon   Economy      2.25          1   \n4             Morning  zero        Morning   Economy      2.33          1   \n...               ...   ...            ...       ...       ...        ...   \n270133  Early_Morning   one          Night  Business     17.25         49   \n270134        Morning   one        Evening  Business     10.08         49   \n270135      Afternoon   one          Night  Business     10.42         49   \n270136  Early_Morning   one        Evening  Business     10.00         49   \n270137        Morning   one        Evening  Business     10.08         49   \n\n        price  departureTimeMapping  arrivalTimeMapping  stopsMapping  \\\n0        5953                     4                   5             1   \n1        5953                     1                   2             1   \n2        5956                     1                   1             1   \n3        5955                     2                   3             1   \n4        5955                     2                   2             1   \n...       ...                   ...                 ...           ...   \n270133  68739                     1                   5             2   \n270134  69265                     2                   4             2   \n270135  77105                     3                   5             2   \n270136  81585                     1                   4             2   \n270137  81585                     2                   4             2   \n\n        classMapping  \n0                  1  \n1                  1  \n2                  1  \n3                  1  \n4                  1  \n...              ...  \n270133             2  \n270134             2  \n270135             2  \n270136             2  \n270137             2  \n\n[270138 rows x 11 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>departure_time</th>\n      <th>stops</th>\n      <th>arrival_time</th>\n      <th>class</th>\n      <th>duration</th>\n      <th>days_left</th>\n      <th>price</th>\n      <th>departureTimeMapping</th>\n      <th>arrivalTimeMapping</th>\n      <th>stopsMapping</th>\n      <th>classMapping</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Evening</td>\n      <td>zero</td>\n      <td>Night</td>\n      <td>Economy</td>\n      <td>2.17</td>\n      <td>1</td>\n      <td>5953</td>\n      <td>4</td>\n      <td>5</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Early_Morning</td>\n      <td>zero</td>\n      <td>Morning</td>\n      <td>Economy</td>\n      <td>2.33</td>\n      <td>1</td>\n      <td>5953</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Early_Morning</td>\n      <td>zero</td>\n      <td>Early_Morning</td>\n      <td>Economy</td>\n      <td>2.17</td>\n      <td>1</td>\n      <td>5956</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Morning</td>\n      <td>zero</td>\n      <td>Afternoon</td>\n      <td>Economy</td>\n      <td>2.25</td>\n      <td>1</td>\n      <td>5955</td>\n      <td>2</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Morning</td>\n      <td>zero</td>\n      <td>Morning</td>\n      <td>Economy</td>\n      <td>2.33</td>\n      <td>1</td>\n      <td>5955</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>270133</th>\n      <td>Early_Morning</td>\n      <td>one</td>\n      <td>Night</td>\n      <td>Business</td>\n      <td>17.25</td>\n      <td>49</td>\n      <td>68739</td>\n      <td>1</td>\n      <td>5</td>\n      <td>2</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>270134</th>\n      <td>Morning</td>\n      <td>one</td>\n      <td>Evening</td>\n      <td>Business</td>\n      <td>10.08</td>\n      <td>49</td>\n      <td>69265</td>\n      <td>2</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>270135</th>\n      <td>Afternoon</td>\n      <td>one</td>\n      <td>Night</td>\n      <td>Business</td>\n      <td>10.42</td>\n      <td>49</td>\n      <td>77105</td>\n      <td>3</td>\n      <td>5</td>\n      <td>2</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>270136</th>\n      <td>Early_Morning</td>\n      <td>one</td>\n      <td>Evening</td>\n      <td>Business</td>\n      <td>10.00</td>\n      <td>49</td>\n      <td>81585</td>\n      <td>1</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>270137</th>\n      <td>Morning</td>\n      <td>one</td>\n      <td>Evening</td>\n      <td>Business</td>\n      <td>10.08</td>\n      <td>49</td>\n      <td>81585</td>\n      <td>2</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n    </tr>\n  </tbody>\n</table>\n<p>270138 rows × 11 columns</p>\n</div>"
      },
-     "execution_count": 20,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# df.sort_values(by= \"SourceAirport\" )\n",
-    "Price = 0\n",
-    "flag = [0,0,0,0,0,0]\n",
-    "for i , r in df.iterrows():\n",
-    "    if r['SourceAirport'] == 'Imam Khomeini International Airport' and \\\n",
-    "        r['DestinationAirport'] == 'Esenboğa International Airport' and flag[0] == 0:\n",
-    "        Price += r['Price']\n",
-    "        flag[0] = 1\n",
-    "        print(r['Price'])\n",
-    "\n",
-    "\n",
-    "    elif r['SourceAirport'] == 'Esenboğa International Airport' and \\\n",
-    "        r['DestinationAirport'] == 'Atatürk International Airport' and flag[1] == 0:\n",
-    "        Price += r['Price']\n",
-    "        flag[1] = 1\n",
-    "        print(r['Price'])\n",
-    "\n",
-    "\n",
-    "    elif r['SourceAirport'] == 'Atatürk International Airport' and \\\n",
-    "        r['DestinationAirport'] == 'John F Kennedy International Airport' and flag[2] == 0:\n",
-    "        Price += r['Price']\n",
-    "        flag[2] = 1\n",
-    "        print(r['Price'])\n",
-    "\n",
-    "\n",
-    "    elif r['SourceAirport'] == 'John F Kennedy International Airport' and \\\n",
-    "        r['DestinationAirport'] == 'Philadelphia International Airport' and flag[3] == 0:\n",
-    "        Price += r['Price']\n",
-    "        flag[3] = 1\n",
-    "        print(r['Price'])\n",
-    "\n",
-    "    elif r['SourceAirport'] == 'Philadelphia International Airport' and \\\n",
-    "        r['DestinationAirport'] == 'Baltimore/Washington International Thurgood Marshall Airport' and flag[4] == 0:\n",
-    "        Price += r['Price']\n",
-    "        flag[4] = 1\n",
-    "        print(r['Price'])\n",
-    "    elif r['SourceAirport'] == 'Baltimore/Washington International Thurgood Marshall Airport' and \\\n",
-    "        r['DestinationAirport'] == 'Raleigh Durham International Airport' and flag[5] == 0:\n",
-    "        Price += r['Price']\n",
-    "        flag[5] = 1\n",
-    "        print(r['Price'])\n",
-    "Price\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# df.sort_values(by= \"SourceAirport\" )\n",
-    "Price = 0\n",
-    "flag = [0,0,0,0,0,0]\n",
-    "for i , r in df.iterrows():\n",
-    "    if r['SourceAirport'] == 'Imam Khomeini International Airport' and \\\n",
-    "        r['DestinationAirport'] == 'Esenboğa International Airport' and flag[0] == 0:\n",
-    "        Price += r['Price']\n",
-    "        flag[0] = 1\n",
-    "\n",
-    "    elif r['SourceAirport'] == 'Esenboğa International Airport' and \\\n",
-    "        r['DestinationAirport'] == 'Atatürk International Airport' and flag[1] == 0:\n",
-    "        Price += r['Price']\n",
-    "        flag[1] = 1\n",
-    "\n",
-    "    elif r['SourceAirport'] == 'Atatürk International Airport' and \\\n",
-    "        r['DestinationAirport'] == 'John F Kennedy International Airport' and flag[2] == 0:\n",
-    "        Price += r['Price']\n",
-    "        flag[2] = 1\n",
-    "\n",
-    "    if r['SourceAirport'] == 'John F Kennedy International Airport' and \\\n",
-    "        r['DestinationAirport'] == 'Philadelphia International Airport' and flag[3] == 0:\n",
-    "        Price += r['Price']\n",
-    "        flag[3] = 1\n",
-    "    if r['SourceAirport'] == 'Philadelphia International Airport' and \\\n",
-    "        r['DestinationAirport'] == 'Baltimore/Washington International Thurgood Marshall Airport' and flag[4] == 0:\n",
-    "        Price += r['Price']\n",
-    "        flag[4] = 1\n",
-    "    if r['SourceAirport'] == 'Baltimore/Washington International Thurgood Marshall Airport' and \\\n",
-    "        r['DestinationAirport'] == 'Raleigh Durham International Airport' and flag[5] == 0:\n",
-    "        Price += r['Price']\n",
-    "        flag[5] = 1\n",
-    "Price\n",
-    "\n"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
